--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "start": "node index.js",
+    "clean": "rm -rf screenshots"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/oahehc/screenshot-tool.git"
